--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app",
+    "start": "node app",
     "build:css": "npx tailwindcss -i ./public/stylesheets/App.css -o ./public/stylesheets/tailwind.css --watch"
   },
   "keywords": [],
